individual color channel histogram equalization and removing ANN from the makefile

--- a/Makefile.mac
+++ b/Makefile.mac
@@ -4,12 +4,12 @@ CFLAGS=-c -Wall -O3 -g
 
 OPENCV_PREFIX = /opt/local
 
-LIBDIR = -L/usr/X11R6/lib -L/Users/ktuite/Library/ann_1.1.2/lib -I$(OPENCV_PREFIX)/include
-INCDIR = -I/opt/local/include -I/Users/ktuite/Library/ann_1.1.2/include -L$(OPENCV_PREFIX)/lib 
+LIBDIR = -L/usr/X11R6/lib -I$(OPENCV_PREFIX)/include
+INCDIR = -I/opt/local/include -L$(OPENCV_PREFIX)/lib 
 
 LIBS = -lopencv_highgui -lopencv_imgproc -lopencv_core -lgsl
 
-EXECUTABLE=collectionFlow
+EXECUTABLE=eigenface
 SOURCES=FaceProcessApp.cpp
 
 all: $(EXECUTABLE)
