morph app now also in there

--- a/Makefile.mac
+++ b/Makefile.mac
@@ -20,10 +20,12 @@ FLOWSOURCES=GaussianPyramid.cpp OpticalFlow.cpp CVOpticalFlow.cpp Stochastic.cpp
 FLOWOBJECTS=$(FLOWSOURCES:.cpp=.o)
 FLOWFLAGS=-D_LINUX_MAC -D_OPENCV -I/opt/local/include/opencv 
 
-all: $(COLLECTIONFLOWFACE) $(WARPFACE) $(FLOWFACE) 
+MORPHFACE=morphApp
+
+all: $(COLLECTIONFLOWFACE) $(WARPFACE) $(FLOWFACE) $(MORPHFACE)
 
 clean: 
-	rm -f *.o $(COLLECTIONFLOWFACE) $(WARPFACE) $(FLOWFACE)
+	rm -f *.o $(COLLECTIONFLOWFACE) $(WARPFACE) $(FLOWFACE) $(MORPHFACE)
 	    
 $(COLLECTIONFLOWFACE): $(COLLECTIONFLOWSOURCES)  $(FLOWOBJECTS) 
 	$(CC) $(FLOWFLAGS) $(INCDIR) $(LIBDIR) $(COLLECTIONFLOWSOURCES) $(FLOWOBJECTS)  -o $@ $(LIBS)
@@ -33,6 +35,9 @@ $(WARPFACE): $(WARPSOURCES)
 
 $(FLOWFACE):  FlowFaceApp.cpp $(FLOWOBJECTS) 
 	$(CC) $(FLOWFLAGS) $(INCDIR) $(LIBDIR) FlowFaceApp.cpp $(FLOWOBJECTS) -o $@ $(LIBS)
+
+$(MORPHFACE):  MorphApp.cpp $(FLOWOBJECTS) 
+	$(CC) $(FLOWFLAGS) $(INCDIR) $(LIBDIR) MorphApp.cpp $(FLOWOBJECTS) -o $@ $(LIBS)
 
 
 .cpp.o:
