--- a/Makefile.mac
+++ b/Makefile.mac
@@ -5,9 +5,9 @@ CFLAGS=-c -Wall -O3 -g
 OPENCV_PREFIX = /opt/local
 
 LIBDIR = -L/usr/X11R6/lib -I$(OPENCV_PREFIX)/include
-INCDIR = -I/opt/local/include -L$(OPENCV_PREFIX)/lib 
+INCDIR = -I/opt/local/include -L$(OPENCV_PREFIX)/lib -I/Users/ktuite/Library
 
-LIBS = -lopencv_highgui -lopencv_imgproc -lopencv_core -lopencv_calib3d -lgsl
+LIBS = -lopencv_highgui -lopencv_imgproc -lopencv_core -lopencv_calib3d -lgsl -lopencv_video 
 
 COLLECTIONFLOWFACE=collectionFlow
 COLLECTIONFLOWSOURCES=CollectionFlowApp.cpp
