--- a/Makefile.mac
+++ b/Makefile.mac
@@ -4,8 +4,8 @@ CFLAGS=-c -Wall -O3 -g
 
 OPENCV_PREFIX = /opt/local
 
-LIBDIR = -L/usr/X11R6/lib -I$(OPENCV_PREFIX)/include
-INCDIR = -I/opt/local/include -L$(OPENCV_PREFIX)/lib -I/Users/ktuite/Library
+LIBDIR = -L/usr/X11R6/lib -I$(OPENCV_PREFIX)/include -L/usr/lib 
+INCDIR = -I/opt/local/include -L$(OPENCV_PREFIX)/lib -I/Users/ktuite/Library -I/usr/include -I/usr/include/opencv -I/homes/grail/ktuite/library
 
 LIBS = -lopencv_highgui -lopencv_imgproc -lopencv_core -lopencv_calib3d -lgsl -lopencv_video 
 
