--- a/Makefile.mac
+++ b/Makefile.mac
@@ -15,6 +15,9 @@ COLLECTIONFLOWSOURCES=CollectionFlowApp.cpp
 WARPFACE=warpFace
 WARPSOURCES=WarpFaceApp.cpp
 
+SHAPEFACE=shape3D
+SHAPESOURCES=Shape3DApp.cpp
+
 FLOWFACE=flowFace
 FLOWSOURCES=GaussianPyramid.cpp OpticalFlow.cpp CVOpticalFlow.cpp Stochastic.cpp
 FLOWOBJECTS=$(FLOWSOURCES:.cpp=.o)
@@ -32,6 +35,9 @@ $(COLLECTIONFLOWFACE): $(COLLECTIONFLOWSOURCES)  $(FLOWOBJECTS)
 
 $(WARPFACE): $(WARPSOURCES) 
 	$(CC) $(INCDIR) $(LIBDIR) $(WARPSOURCES) -o $@ $(LIBS)
+
+$(SHAPEFACE): $(SHAPESOURCES) 
+	$(CC) $(INCDIR) $(LIBDIR) $(SHAPESOURCES) -o $@ $(LIBS)
 
 $(FLOWFACE):  FlowFaceApp.cpp $(FLOWOBJECTS) 
 	$(CC) $(FLOWFLAGS) $(INCDIR) $(LIBDIR) FlowFaceApp.cpp $(FLOWOBJECTS) -o $@ $(LIBS)
