added a thing to copy it to a different directory

--- a/Makefile.mac
+++ b/Makefile.mac
@@ -29,6 +29,7 @@ clean:
 	    
 $(COLLECTIONFLOWFACE): $(COLLECTIONFLOWSOURCES)  $(FLOWOBJECTS) 
 	$(CC) $(FLOWFLAGS) $(INCDIR) $(LIBDIR) $(COLLECTIONFLOWSOURCES) $(FLOWOBJECTS)  -o $@ $(LIBS)
+	cp $(COLLECTIONFLOWFACE) ../face-server/server/bin/collectionFlow
 
 $(WARPFACE): $(WARPSOURCES) 
 	$(CC) $(INCDIR) $(LIBDIR) $(WARPSOURCES) -o $@ $(LIBS)
