stuff to copy binaries to their homes

--- a/Makefile.mac
+++ b/Makefile.mac
@@ -39,12 +39,14 @@ $(COLLECTIONFLOWFACE): $(COLLECTIONFLOWSOURCES)  $(FLOWOBJECTS)
 
 $(INCCFLOW): $(INCCFLOWSOURCES)  $(FLOWOBJECTS) 
 	$(CC) $(FLOWFLAGS) $(INCDIR) $(LIBDIR) $(INCCFLOWSOURCES) $(FLOWOBJECTS)  -o $@ $(LIBS)
+	cp $(INCCFLOW) ../face-server/server/bin/
 
 $(WARPFACE): $(WARPSOURCES) 
 	$(CC) $(INCDIR) $(LIBDIR) $(WARPSOURCES) -o $@ $(LIBS)
 
 $(SHAPEFACE): $(SHAPESOURCES) 
 	$(CC) $(INCDIR) $(LIBDIR) $(SHAPESOURCES) -o $@ $(LIBS)
+	cp $(SHAPEFACE) ../face-server/server/bin/
 
 $(FLOWFACE):  FlowFaceApp.cpp $(FLOWOBJECTS) 
 	$(CC) $(FLOWFLAGS) $(INCDIR) $(LIBDIR) FlowFaceApp.cpp $(FLOWOBJECTS) -o $@ $(LIBS)
