collection flow and new git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 *.o
 *.jpg
+agingDemo
+alignFace
+cfout*
+collectionFlow
+detectFaces
+*.txt
+*.ply
+*.gif
+xCluster
+shape3D
+swapFace
+starterApp
+*.ai
+incrementalCFlow
+eigenface
